# recognizers

./: README.md  pyproject.toml
src/recognizers/: __init__.py  json_fast.py  json_manipulata.py  json_parser_recursive_descent.py
src/recognizers/data/: turn_0.json  turn_1.json  turn_2.json
