[project]
name = "recognizers"
version = "0.1.0"
description = "recognizers"
readme = "README.md"
authors = [
    { name = "gustofied", email = "gustofied@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests",
    "python-dotenv",
    "mistralai",
]

[project.scripts]
recognizers = "recognizers:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
